--- a/index.html
+++ b/index.html
@@ -1,12 +1,142 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Social proof section</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <div class="container-fluid div-container">
+        <main class="container">
+            <section class="row">
+                <div class="col-12 col-lg-6 p-lg-5">
+                    <div class="mt-5 text-center text-lg-start">
+                        <h1>10,000+ of our users love our products.</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Consequatur impedit accusamus alias et in vel adipisci magnam, quo ducimus placeat?
+                            Cupiditate nostrum maiores dolorem consequatur.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6 p-lg-5">
+                    <div class="row">
+                        <div class="col-12 col-lg-10">
+                            <div class="rounded mt-5 d-lg-flex div-rated pt-lg-4">
+                                <div class="text-center">
+                                    <img src="/images/icon-star.svg" class="ms-3" alt="">
+                                    <img src="/images/icon-star.svg" alt="">
+                                    <img src="/images/icon-star.svg" alt="">
+                                    <img src="/images/icon-star.svg" alt="">
+                                    <img src="/images/icon-star.svg" alt="">
+                                </div>
+                                <p class="ms-3 text-center">Rated 5 Stars in Reviews</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-lg-10 div-rated2">
+                            <div class="rounded mt-3 d-lg-flex div-rated pt-lg-4">
+                                <div class="text-center">
+                                    <img src="/images/icon-star.svg" class="ms-3" alt="">
+                                    <img src="/images/icon-star.svg" alt="">
+                                    <img src="/images/icon-star.svg" alt="">
+                                    <img src="/images/icon-star.svg" alt="">
+                                    <img src="/images/icon-star.svg" alt="">
+                                </div>
+                                <p class="ms-3 text-center">Rated 5 Stars in Reviews</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-lg-10 div-rated3">
+                            <div class="rounded mt-3 d-lg-flex div-rated pt-lg-4">
+                                <div class="text-center">
+                                    <img src="/images/icon-star.svg" class="ms-3" alt="">
+                                    <img src="/images/icon-star.svg" alt="">
+                                    <img src="/images/icon-star.svg" alt="">
+                                    <img src="/images/icon-star.svg" alt="">
+                                    <img src="/images/icon-star.svg" alt="">
+                                </div>
+                                <p class="ms-3 text-center">Rated 5 Stars in Reviews</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!--Sección 2-->
+            <section class="row">
+                <div class="col-lg-4 col-12">
+                    <div class="rounded cards p-3 mt-3 mt-lg-5">
+                        <div class="d-flex">
+                            <img src="/images/image-colton.jpg" class="rounded-circle" alt="">
+                            <div class="div-data">
+                                <p class="par-name">Colton Smith</p>
+                                <p class="par-verified">Verified Buyer</p>
+                            </div>
+                        </div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia earum natus eaque iure culpa
+                            quasi
+                            sequi vero illum, ullam labore ipsam, voluptates neque officia! Facilis, hic iste!
+                            Obcaecati,
+                            debitis tempora.
+                            Animi voluptates nulla
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-12 column-c2">
+                    <div class="rounded cards p-3 mt-3">
+                        <div class="d-flex">
+                            <img src="/images/image-irene.jpg" class="rounded-circle" alt="">
+                            <div class="div-data">
+                                <p class="par-name">Irene Roberts</p>
+                                <p class="par-verified">Verified Buyer</p>
+                            </div>
+                        </div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia earum natus eaque iure culpa
+                            quasi
+                            sequi vero illum, ullam labore ipsam, voluptates neque officia! Facilis, hic iste!
+                            Obcaecati,
+                            debitis tempora.
+                            Animi voluptates nulla
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-12 column-c3">
+                    <div class="rounded cards p-3 mt-3">
+                        <div class="d-flex">
+                            <img src="/images/image-anne.jpg" class="rounded-circle" alt="">
+                            <div class="div-data">
+                                <p class="par-name">Anne Wallace</p>
+                                <p class="par-verified">Verified Buyer</p>
+                            </div>
+                        </div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia earum natus eaque iure culpa
+                            quasi
+                            sequi vero illum, ullam labore ipsam, voluptates neque officia! Facilis, hic iste!
+                            Obcaecati,
+                            debitis tempora.
+                            Animi voluptates nulla
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
